--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -1,12 +1,12 @@
 name: Container Registry
 
 on:
-  push:
-    branches: [main]
-    paths: [Dockerfile]
-  pull_request:
-    branches: [main]
-    paths: [Dockerfile]
+  # push:
+  #   branches: [main]
+  #   paths: [Dockerfile]
+  # pull_request:
+  #   branches: [main]
+  #   paths: [Dockerfile]
   schedule:
     # Once a week
     - cron: "0 0 * * */7"
@@ -28,45 +28,45 @@ jobs:
     strategy:
       matrix:
         runtime:
-          - name: freedesktop
-            tag: 21.08
-            packages: org.freedesktop.Platform/x86_64/21.08 org.freedesktop.Sdk/x86_64/21.08 org.freedesktop.Platform/aarch64/21.08 org.freedesktop.Sdk/aarch64/21.08
-            remote: flathub
-
-          - name: freedesktop
-            tag: 22.08
-            packages: org.freedesktop.Platform/x86_64/22.08 org.freedesktop.Sdk/x86_64/22.08 org.freedesktop.Platform/aarch64/22.08 org.freedesktop.Sdk/aarch64/22.08
-            remote: flathub
-
-          - name: gnome
-            tag: 43
-            packages: org.gnome.Platform/x86_64/43 org.gnome.Sdk/x86_64/43 org.gnome.Platform/aarch64/43 org.gnome.Sdk/aarch64/43
-            remote: flathub
-
-          - name: gnome
-            tag: 44
-            packages: org.gnome.Platform/x86_64/44 org.gnome.Sdk/x86_64/44 org.gnome.Platform/aarch64/44 org.gnome.Sdk/aarch64/44
-            remote: flathub
-
-          - name: gnome
-            tag: master
-            packages: org.gnome.Platform/x86_64/master org.gnome.Sdk/x86_64/master org.gnome.Platform/aarch64/master org.gnome.Sdk/aarch64/master
-            remote: gnome-nightly
-
-          - name: kde
-            tag: 5.15-21.08
-            packages: org.kde.Platform/x86_64/5.15-21.08 org.kde.Sdk/x86_64/5.15-21.08 org.kde.Platform/aarch64/5.15-21.08 org.kde.Sdk/aarch64/5.15-21.08
-            remote: flathub
+          # - name: freedesktop
+          #   tag: 21.08
+          #   packages: org.freedesktop.Platform/x86_64/21.08 org.freedesktop.Sdk/x86_64/21.08 org.freedesktop.Platform/aarch64/21.08 org.freedesktop.Sdk/aarch64/21.08
+          #   remote: flathub
+          #
+          # - name: freedesktop
+          #   tag: 22.08
+          #   packages: org.freedesktop.Platform/x86_64/22.08 org.freedesktop.Sdk/x86_64/22.08 org.freedesktop.Platform/aarch64/22.08 org.freedesktop.Sdk/aarch64/22.08
+          #   remote: flathub
+          #
+          # - name: gnome
+          #   tag: 43
+          #   packages: org.gnome.Platform/x86_64/43 org.gnome.Sdk/x86_64/43 org.gnome.Platform/aarch64/43 org.gnome.Sdk/aarch64/43
+          #   remote: flathub
+          #
+          # - name: gnome
+          #   tag: 44
+          #   packages: org.gnome.Platform/x86_64/44 org.gnome.Sdk/x86_64/44 org.gnome.Platform/aarch64/44 org.gnome.Sdk/aarch64/44
+          #   remote: flathub
+          #
+          # - name: gnome
+          #   tag: master
+          #   packages: org.gnome.Platform/x86_64/master org.gnome.Sdk/x86_64/master org.gnome.Platform/aarch64/master org.gnome.Sdk/aarch64/master
+          #   remote: gnome-nightly
+          #
+          # - name: kde
+          #   tag: 5.15-21.08
+          #   packages: org.kde.Platform/x86_64/5.15-21.08 org.kde.Sdk/x86_64/5.15-21.08 org.kde.Platform/aarch64/5.15-21.08 org.kde.Sdk/aarch64/5.15-21.08
+          #   remote: flathub
 
           - name: kde
             tag: 5.15-22.08
             packages: org.kde.Platform/x86_64/5.15-22.08 org.kde.Sdk/x86_64/5.15-22.08 org.kde.Platform/aarch64/5.15-22.08 org.kde.Sdk/aarch64/5.15-22.08
             remote: flathub
 
-          - name: elementary
-            tag: juno-20.08
-            packages: io.elementary.BaseApp//juno-20.08 org.gnome.Platform//3.38 org.gnome.Sdk//3.38
-            remote: flathub
+          # - name: elementary
+          #   tag: juno-20.08
+          #   packages: io.elementary.BaseApp//juno-20.08 org.gnome.Platform//3.38 org.gnome.Sdk//3.38
+          #   remote: flathub
       fail-fast: false
 
     steps:
@@ -122,4 +122,4 @@ jobs:
           context: .
           file: ${{ matrix.runtime.name }}.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/andyholmes/flatter/${{ matrix.runtime.name }}:${{ matrix.runtime.tag }}
+          tags: ghcr.io/realthunder/flatter/${{ matrix.runtime.name }}:${{ matrix.runtime.tag }}
